grammar/bnf.bnf
<syntax>     ::= <rule>+
<rule>       ::= <rule-name> "::="  <expression>

# ID 可以带 -

<rule-name> ::= "<" <ID> ">" <punctuator>?
<expression> ::= <term> ("|" <term>)*

<term>  ::= (<item> | <rule-name> | <group-term>)* <CRLF>?
<item> ::= (<STR> | <ID>) <punctuator>?

<group-term> ::= "(" <expression> ")" <punctuator>?
               | "{" <expression> "}" <punctuator>?

<punctuator> ::= '+' | '*' | '?'

